Fix missing border-radius

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -1335,7 +1335,7 @@ select.ui.dropdown {
     overflow-y: auto;
     border: none;
     box-shadow: none !important;
-    border-radius: 0 0 !important;
+    border-radius: 0 0 @floatingMenuBorderRadius @floatingMenuBorderRadius !important;
     margin: 0 !important;
     min-width: 100% !important;
     width: auto !important;
